Fixed problems with wrongfully named variables after last commit.